--- a/AirQualityMonitor/app/build.gradle
+++ b/AirQualityMonitor/app/build.gradle
@@ -47,4 +47,8 @@ dependencies {
   implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
   implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
   implementation 'com.google.android.material:material:1.0.0'
+
+  //Retrofit Gradle
+  implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+  implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 }
