--- a/AirQualityMonitor/app/build.gradle
+++ b/AirQualityMonitor/app/build.gradle
@@ -24,6 +24,8 @@ android {
 }
 
 dependencies {
+  testImplementation 'junit:junit:4.12'
+
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation project(':core')
 
