--- a/AirQualityMonitor/local.properties
+++ b/AirQualityMonitor/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 04 20:32:49 CST 2020
-sdk.dir=C\:\\Users\\SJ\\AppData\\Local\\Android\\Sdk
+#Sun Oct 04 21:02:20 CDT 2020
+sdk.dir=D\:\\zPrograms\\Android Studio
