--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    // link core module
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':core')
 
@@ -46,7 +47,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "com.google.android.material:material:1.2.1"
 
-    //Kotlinx coroutinue stuff
+    //Kotlinx coroutinue stuff and view model
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
@@ -60,4 +61,6 @@ dependencies {
 
     //TFModel
     implementation 'org.tensorflow:tensorflow-lite:2.0.0'
+
+
 }
